--- a/Deeltoets 1/index.html
+++ b/Deeltoets 1/index.html
@@ -16,6 +16,7 @@
                 <li><a href="#/schedule">Schedule page</a></li>
                 <li><a href="#/game">Game page</a></li>
                 <li><a href="#/ranking">Ranking page</a></li>
+                <li><a href="#/movies">Movies page</a></li>
             </ol>
         </nav>
 
@@ -91,6 +92,21 @@
                     </tbody>
                 </table>
             </section>
+            <section data-route="movies">
+                <h1 data-bind="title"></h1>
+                <table>
+                    
+                    <tbody data-bind="items">                           
+                        <tr>
+                            <td data-bind="id"></td>
+                            <td data-bind="title"></td>
+                            <td data-bind="description"></td>
+                            <td data-bind="team2Score"></td>
+                            <td data-bind="team2"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
         </article>
 
 	<!-- Libs -->
@@ -98,6 +114,7 @@
 	<script src="js/lib/ready.min.js" type="text/javascript"></script>
 	<script src="js/lib/qwery.min.js" type="text/javascript"></script>
 	<script src="js/lib/transparancy.min.js" type="text/javascript"></script>
+    <script src="js/lib/promise.min.js" type="text/javascript"></script>
 
 	<!-- Application -->
 	<script src="js/app.js"></script>
