--- a/Deeltoets 1/index.html
+++ b/Deeltoets 1/index.html
@@ -2,92 +2,107 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
         <title>Threesome Ultimate Frisbee - Game</title>
         <link rel="stylesheet" href="css/style.css" />
-    </head>
-    <body>
 
+    </head>
+    <body id="body">
+    <div id="container">
+        <div id="pullrefresh">
+            <div class="message">
+                <div id="pullrefresh-icon" class="icon arrow arrow-down"></div>
+                <span></span>
+            </div>
+        </div>
         <header>
             <h1><span>Tournament: </span>Amsterdam Ultimate Autumn</h1>
         </header>
         <nav>
             <ol>
-                <li><a href="#/schedule">Schedule page</a></li>
-                <li><a href="#/game">Game page</a></li>
-                <li><a href="#/ranking">Ranking page</a></li>
+                <li><a data-ftrans="slide" href="#/schedule">Schedule page</a></li>
+                <li><a data-ftrans="slide" href="#/ranking">Ranking page</a></li>
                 <li><a href="#/movies">Movies page</a></li>
             </ol>
         </nav>
 
         <article> 
-            <section data-route="schedule">
-                <h1 data-bind="title"></h1>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Datum:</th>
-                            <th>Team 1:</th>
-                            <th>Score team 1:</th>
-                            <th>Score team 2:</th>
-                            <th>Team 2:</th>
-                            <th>View game:</th>
-                        </tr>
-                    </thead>
-                    <tbody data-bind="items">                           
-                        <tr>
-                            <td data-bind="date"></td>
-                            <td data-bind="team1"></td>
-                            <td data-bind="team1Score"></td>
-                            <td data-bind="team2Score"></td>
-                            <td data-bind="team2"></td>
-                            <td><a href="#/game">View</a></td>
-                        </tr>
-                    </tbody>
-                </table>
+            <div id="floatingBarsG">
+                <div class="blockG" id="rotateG_01">
+                </div>
+                <div class="blockG" id="rotateG_02">
+                </div>
+                <div class="blockG" id="rotateG_03">
+                </div>
+                <div class="blockG" id="rotateG_04">
+                </div>
+                <div class="blockG" id="rotateG_05">
+                </div>
+                <div class="blockG" id="rotateG_06">
+                </div>
+                <div class="blockG" id="rotateG_07">
+                </div>
+                <div class="blockG" id="rotateG_08">
+                </div>
+            </div>
+            <section data-route="schedule" data-bind="schedule">
+                <article>
+                    <a class="update" href="">
+                        <h4 data-bind="startTime"></h4>
+                        <h2 data-bind="team1Name"></h2>
+                        <h3 data-bind="team1Score"></h3>
+                        <h3 data-bind="team2Score"></h3>
+                        <h2 data-bind="team2Name"></h2>
+                    </a>
+                </article>
+
             </section>
-            <section data-route="game">
-                <h1 data-bind="title"></h1>
-                 <table>
-                    <thead>
-                        <tr>
-                            <th>Score:</th>
-                            <th>Team 1:</th>
-                            <th>Score team 1:</th>
-                            <th>Score team 2:</th>
-                            <th>Team 2:</th>
-                        </tr>
-                    </thead>
-                    <tbody data-bind="items">
-                        <tr>
-                            <td data-bind="score"></td>
-                            <td data-bind="team1"></td>
-                            <td data-bind="team1Score"></td>
-                            <td data-bind="team2Score"></td>
-                            <td data-bind="team2"></td>
-                        </tr>
-                    </tbody>
-                </table>
+            <section data-route="game" data-bind="game">
+                <form>
+                    <section>
+                        <h2 data-bind="team1Name"></h2>
+                    </section>
+                    <section>
+                        <p onclick="APP.setQuantity(1, 'team1Score');">+</p>
+                        <input type="text" id="team1Score" name="team1Score" data-bind="team1Score"></input>
+                        <p onclick="APP.setQuantity(2, 'team1Score');">-</p>
+                    </section>
+                    <section>
+                        <p onclick="APP.setQuantity(1, 'team2Score');">+</p>
+                        <input type="text" id="team2Score" name="team2Score" data-bind="team2Score"></input>
+                        <p onclick="APP.setQuantity(2, 'team2Score');">-</p>
+                    </section>
+                    <section>
+                        <h2 data-bind="team2Name"></h2>
+                    </section>
+                    <section>
+                        <label for="finalScore">Is the score final?</label>
+                        <input id="finalScore" name="finalScore" value="false" type="checkbox" />
+                        <input type="button" onclick="APP.dataPusher()" value="Update"/>
+                    </section>                
+                </form>
             </section>
              <section data-route="ranking">
-                <h1 data-bind="title"></h1>
                  <table>
                     <thead>
                         <tr>
                             <th>Team:</th>
-                            <th>Win:</th>
-                            <th>Lost:</th>
-                            <th>Points Win:</th>
-                            <th>Points Lost;</th>
+                            <th>Wins:</th>
+                            <th>Losses:</th>
+                            <th>Points Scored:</th>
+                            <th>Points Allowed:</th>
+                            <th>+/-</th>
                         </tr>
                     </thead>
-                    <tbody data-bind="items">
+                    <tbody data-bind="ranking">
                         <tr>
-                            <td data-bind="team"></td>
-                            <td data-bind="Win"></td>
-                            <td data-bind="Lost"></td>
-                            <td data-bind="Pw"></td>
-                            <td data-bind="Pl"></td>
+                            <td data-bind="teamName"></td>
+                            <td data-bind="wins"></td>
+                            <td data-bind="losses"></td>
+                            <td data-bind="pointsScored"></td>
+                            <td data-bind="pointsAllowed"></td>
+                            <td data-bind="plusMinus"></td>
                         </tr>
                     </tbody>
                 </table>
@@ -96,10 +111,10 @@
                 <h1 data-bind="title"></h1>
                 <table>
                     
-                    <tbody data-bind="items">                           
+                    <tbody>                           
                         <tr>
-                            <td data-bind="id"></td>
-                            <td data-bind="title"></td>
+                            <td data-bind="plus_minus"></td>
+                            <td data-bind="team_id"></td>
                             <td data-bind="description"></td>
                             <td data-bind="team2Score"></td>
                             <td data-bind="team2"></td>
@@ -108,6 +123,7 @@
                 </table>
             </section>
         </article>
+    </div>
 
 	<!-- Libs -->
 	<script src="js/lib/routie.min.js"></script>
@@ -115,6 +131,9 @@
 	<script src="js/lib/qwery.min.js" type="text/javascript"></script>
 	<script src="js/lib/transparancy.min.js" type="text/javascript"></script>
     <script src="js/lib/promise.min.js" type="text/javascript"></script>
+    <script src="js/lib/hammer.min.js" type="text/javascript"></script>
+    <script src="js/lib/modernizr.js" type="text/javascript"></script>
+    <script src="js/lib/qwest-0.4.2.min.js" type="text/javascript"></script>
 
 	<!-- Application -->
 	<script src="js/app.js"></script>
