--- a/Deeltoets 1/index.html
+++ b/Deeltoets 1/index.html
@@ -71,6 +71,7 @@
                                 <p data-bind="losses"></p>
                                 <p data-bind="pointsScored"></p>
                                 <p data-bind="pointsAllowed"></p>
+                                <p data-bind="plusMinus"></p>
                             </article>
                         </section>
                     </div>
